--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "yaayitsmango",
   "license": "ISC",
+  "engines": {
+    "node": "14.15.0"
+  },
   "dependencies": {
     "discord.js": "^12.3.1"
   }
